@@ -1,5 +1,8 @@
 2007-06-16  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/rs.rb: (Gluon::RequestResponseContext class)
+	integrated request response manipulations.
+
 	* lib/gluon/po.rb: (Gluon::PresentationObject class) query class
 	method. query option of link and frame.
 
